--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,10 @@
 ---
-- name: add nginx repository
-  yum:
-    name: http://nginx.org/packages/centos/{{ ansible_distribution_major_version }}/noarch/RPMS/nginx-release-centos-{{ ansible_distribution_major_version }}-0.el{{ ansible_distribution_major_version }}.ngx.noarch.rpm
-    state: present
-  tags:
-    - nginx
+- include: install.yml
+  tags: [web-server, nginx, install, nginx-install]
 
-- name: install nginx
-  yum: name=nginx state=present
-  tags:
-    - nginx
+- include: configure.yml
+  tags: [web-server, nginx, configuration, nginx-configuration]
 
-- name: configure nginx as startup service
-  service: name=nginx state=started enabled=yes
-  tags:
-    - configuration
-    - nginx
+- include: sites.yml
+  when: nginx_sites is defined
+  tags: [web-server, nginx, nginx-site]
