--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,4 @@ ssl_ciphers: ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA
 ssl_prefer_server_ciphers: 'on'
 ssl_stapling: 'on'
 ssl_stapling_verify: 'on'
+disable_server_tokens: no
